--- a/car_maniacs_project/templates/carwebsite/manufacturer.html
+++ b/car_maniacs_project/templates/carwebsite/manufacturer.html
@@ -9,7 +9,7 @@
     <hr/>
     {% if manufacturer %}
         {% if models %}
-        <ul class="list-group">
+        <ul style="max-width: 435px;" class="list-group">
                    {%if manufacturer.picture%}
                                <li class="list-group-item" style="background:gray;"><img width="400" height="200" src="/{{manufacturer.picture.url}}"></li>
                     {% endif %}
