--- a/car_maniacs_project/templates/carwebsite/base.html
+++ b/car_maniacs_project/templates/carwebsite/base.html
@@ -36,12 +36,12 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="/carwebsite/">CarManiacs</a>
-          
         </div>
 		
         <div class="navbar-collapse collapse">
 	
 	 <ul class="nav navbar-nav navbar-right">
+	 			
                 <li><a href="{% url 'top_rated' %}">Users' favourites</a></li>
                 <li><a href="{% url 'new_cars' %}">New Cars</a></li>
                 <li><a href="{% url 'compare' %}">Compare</a></li>
@@ -62,7 +62,12 @@
 <div class="container-fluid">
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
-        <strong>Manufacturers</strong><hr/>
+        
+	<form class="form-inline" id="user_form" method="post" action="{% url 'search' %}">{% csrf_token %}
+     <input class="form-control" type="text" name="query" id="query" placeholder="Search here" /><br/><br/>
+     <input class="btn btn-primary" type="submit" name="submit" value="Search" />
+	</form>	<br/>
+        <strong>Manufacturers</strong><br/><br/>
                 {% block side_block %}
 				{% load carwebsite_extras %}
 				{% get_manufacturer_list manufacturer %}
@@ -78,15 +83,8 @@
 </form>			
 -->		
 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-	<form class="form-inline" id="user_form" method="post" action="{% url 'search' %}">
-	{% csrf_token %}
-	<h1 style="color:white;">Search for cars:</h1><br>
-     <input class="form-control" type="text" name="query" id="query" />
-     <input class="btn btn-primary" type="submit" name="submit" value="Search" />
-</form>		
+	
            <div>
-           <br>
-           <br>
                 {% block body_block %}
 				{% endblock %}
                 </div>
