Minor modifications, making overall look and feel more consistent

--- a/car_maniacs_project/templates/carwebsite/compare.html
+++ b/car_maniacs_project/templates/carwebsite/compare.html
@@ -98,7 +98,7 @@
                  -->
         <ul class="list-group ">
                     {%if model1.picture%}
-                               <li class="list-group-item" style="background:gray;"><img width="400" height="200" src="/{{model1.picture.url}}"></li>
+                               <li class="list-group-item" style="background:gray;"><img height="200" src="/{{model1.picture.url}}"></li>
                     {% else %}
                                 <li class="list-group-item">No picture available</li>
                     {% endif %}
@@ -189,7 +189,7 @@
                  -->
         <ul class="list-group">
                     {%if model2.picture%}
-                               <li class="list-group-item" style="background:gray;"><img width="400" height="200" src="/{{model2.picture.url}}"></li>
+                               <li class="list-group-item" style="background:gray;"><img height="200" src="/{{model2.picture.url}}"></li>
                     {% else %}
                                 <li class="list-group-item">No picture available</li>
                     {% endif %}
