--- a/car_maniacs_project/templates/carwebsite/ethics-statement.html
+++ b/car_maniacs_project/templates/carwebsite/ethics-statement.html
@@ -4,10 +4,11 @@
 {% block title %}Ethics Statement {% endblock %}
 
 {% block body_block %}
+
+<h1 style="color:white;">Car-Manics operate under the following ethics policy </h1>
 <div class="page-header">
 
 <li class="list-group-item">
-Car-Manics operate under the following ethics policy: 
 <h2>We don’t sell cars. </h2>
 We’re not a car manufacturer and we’re not affiliated with car manufacturers. 
 
@@ -21,6 +22,7 @@ We do not accept meals, discounts, paid trips or gifts from companies or their P
 We do not let ourselves be bullied into taking a review off. 
 
 <h2>Our policies do not permit placements of advertorial.</h2>
+Period.
 
 <h2>Advertising </h2>
 There may not be advertisements from car manufacturers or resellers on Car-Maniacs. 
