--- a/car_maniacs_project/templates/carwebsite/rate.html
+++ b/car_maniacs_project/templates/carwebsite/rate.html
@@ -14,7 +14,7 @@
                   
                  {% endif %}
                  -->
-        <ul class="list-group">
+        <ul style="max-width: 435px;" class="list-group">
 			{%if model.picture%}
 					   <li class="list-group-item" style="background:gray;"><img width="400" height="200" src="/{{model.picture.url}}"></li>
 			{% else %}
