--- a/car_maniacs_project/templates/carwebsite/model.html
+++ b/car_maniacs_project/templates/carwebsite/model.html
@@ -21,7 +21,8 @@
 		$("[name='averageRatingsStars']").css('width',({{model.averageRatings}}*10).toString() + "%");
 	}
 	</script>
-    <h1 style="color:white;">{{ manufacturer_name }} {{ model_name }}</h1>
+    <h1 style="color:white;">{{ manufacturer_name }} {{ model_name }}</h1> 
+    
     {% if rated %}
     <div class="alert alert-success">
         <a href="#" class="close" data-dismiss="alert">&times;</a>
@@ -29,6 +30,7 @@
         We've received your ratings!
     </div>
     {% endif %}
+    
     {% if manufacturer %}
         {% if model %}
                   <!--
@@ -37,19 +39,24 @@
                   
                  {% endif %}
                  -->
-        <ul style="max-width: 435px;" class="list-group">
+     		   <ul style="max-width: 435px;" class="list-group">
+     		   		
+     		   		<li class="list-group-item"> 
+    				<h4><a href="{% url 'compare' model.manufacturer.slug  model.slug %}">Compare this car</a></h4>
+    				</li>
+    				
                     {%if model.picture%}
-                               <li class="list-group-item" style="background:gray;"><img width="400" height="200" src="/{{model.picture.url}}"></li>
+                               <li class="list-group-item" style="background:gray;"><img width="400" src="/{{model.picture.url}}"></li>
                     {% else %}
                                 <li class="list-group-item">No picture available</li>
                     {% endif %}
+                    
                     <li class="list-group-item">Model:{{model.title}}</li>
                     <li class="list-group-item">Speed: 
                     
                     <span style="display: block; width: 130px; height: 13px; background: url(/static/images/star-rating-sprite.png) 0 0;">
 				    <span name="speedStars" style="display: block; width: 0; height: 13px; background: url(/static/images/star-rating-sprite.png) 0 -13px;"></span>
 					</span>
-                    
                     </li>
                     <li class="list-group-item">Acceleration: 
                     <span style="display: block; width: 130px; height: 13px; background: url(/static/images/star-rating-sprite.png) 0 0;">
