--- a/car_maniacs_project/templates/carwebsite/top_rated.html
+++ b/car_maniacs_project/templates/carwebsite/top_rated.html
@@ -8,9 +8,14 @@
 <h1 style="color:white;">Favourite cars</h1>
  <hr/>
         {% if favourites %}
-        <ul class="list-group">
+        <ul style="max-width: 435px;" class="list-group">
                 {% for model in favourites %}
-                        <li class="list-group-item"><a href="{% url 'model' model.manufacturer.slug  model.slug %} ">{{model.title}} - average {{model.averageRatings}}</a></li>
+                        <li class="list-group-item"><a href="{% url 'model' model.manufacturer.slug  model.slug %} ">{{model.manufacturer.name}} {{model.title}} - {{model.averageRatings}}<br/>
+                        {%if model.picture%}
+                        <img width="400" src="/{{model.picture.url}}">
+	                    {% endif %}
+                        
+                        </a></li>
                 {% endfor %}
                 </ul>
         {% else %}
