--- a/car_maniacs_project/templates/carwebsite/manufacturer.html
+++ b/car_maniacs_project/templates/carwebsite/manufacturer.html
@@ -5,13 +5,11 @@
 {% block title %}{{ manufacturer_name }}{% endblock %}
 
 {% block body_block %}
-    <h1 style="color:white;">{{ manufacturer_name }}</h1>
-    <hr/>
     {% if manufacturer %}
         {% if models %}
         <ul style="max-width: 435px;" class="list-group">
                    {%if manufacturer.picture%}
-                               <li class="list-group-item" style="background:gray;"><img width="400" height="200" src="/{{manufacturer.picture.url}}"></li>
+                               <li class="list-group-item" style="background:gray;"><img width="400" src="/{{manufacturer.picture.url}}"></li>
                     {% endif %}
             {% for model in  models %} 
                     <li class="list-group-item"><a href="{% url 'model' manufacturer.slug model.slug %}">{{model.title}}</a></li>
