Added Manufacturers to top menu (wasn't accessible from phones otherwise)

--- a/car_maniacs_project/templates/carwebsite/base.html
+++ b/car_maniacs_project/templates/carwebsite/base.html
@@ -42,6 +42,7 @@
 	
 	 <ul class="nav navbar-nav navbar-right">
 	 			
+                <li><a href="{% url 'manufacturer' %}">Manufacturers</a></li>
                 <li><a href="{% url 'top_rated' %}">Users' favourites</a></li>
                 <li><a href="{% url 'new_cars' %}">New Cars</a></li>
                 <li><a href="{% url 'compare' %}">Compare</a></li>
