--- a/car_maniacs_project/templates/carwebsite/manufacturer.html
+++ b/car_maniacs_project/templates/carwebsite/manufacturer.html
@@ -19,7 +19,15 @@
                <h3 style="color:white;">No models registered for this manufacturer.</h3>
         {% endif %}
     {% else %}
-         <h3 style="color:white;">Manufacturer is not registered.</h3>  
+    	 <h1 style="color:white;">Manufacturers</h1>
+	
+    	<ul style="max-width: 435px;" class="list-group">
+    	<li class="list-group-item">
+    	
+		{% load carwebsite_extras %}
+		{% get_manufacturer_list manufacturer %}
+    	</li>
+    	</ul>
     {% endif %}         
                 
 
