--- a/car_maniacs_project/templates/carwebsite/index.html
+++ b/car_maniacs_project/templates/carwebsite/index.html
@@ -6,9 +6,30 @@
 {% block body_block %}
 <div class="page-header" style="color:white;">
             {% if user.is_authenticated %}
-                <h1>Welcome {{ user.username }}!</h1>
+                <h1>Welcome to CarManiacs, {{ user.username }}</h1>
             {% else %}
-                <h1>Welcome</h1>
+                <h1>Welcome to CarManiacs</h1>
             {% endif %}
+            
+            <h4>This is a simple star-based car review site where you can tell what you think about your car and read what others think about theirs. <h4/>
+            <h5>We pride ourselves on being unbiased. <a style="color: #dddddd;" href="{% url 'ethics' %}">Click here to read our ethics statement. </a></h5>
 </div>
+
+        {% if news %}
+        <ul class="list-group" style="min-height: 150;">
+                {% for item in news %}
+                        <li class="list-group-item">
+                         {% if item.picture %}
+                        <img align="right" height="150" style="display:inline;"  src="/{{item.picture.url}}">
+                        {% endif %}
+                        
+                        <h2>{{item.title}}</h2>{{item.intro}} <br/><br/><a href="{{item.link}}">Click here to read more!</a>
+                       
+                        </li>
+                {% endfor %}
+        </ul>
+		{% endif %}
+
+
+
 {% endblock %}
