--- a/car_maniacs_project/templates/carwebsite/model.html
+++ b/car_maniacs_project/templates/carwebsite/model.html
@@ -2,7 +2,7 @@
 
 {% load staticfiles %}
 
-{% block title %}{{ manufacturer_name }} {{model_name}}{% endblock %}
+{% block title %}{{ manufacturer.name }} {{model.title}}{% endblock %}
 
 {% block body_block %}
 	<!--- 
@@ -21,7 +21,7 @@
 		$("[name='averageRatingsStars']").css('width',({{model.averageRatings}}*10).toString() + "%");
 	}
 	</script>
-    <h1 style="color:white;">{{ manufacturer_name }} {{ model_name }}</h1> 
+    <h1 style="color:white;">{{ manufacturer.name }} {{ model.title }}</h1> 
     
     {% if rated %}
     <div class="alert alert-success">
