--- a/car_maniacs_project/templates/carwebsite/rate.html
+++ b/car_maniacs_project/templates/carwebsite/rate.html
@@ -16,7 +16,7 @@
                  -->
         <ul style="max-width: 435px;" class="list-group">
 			{%if model.picture%}
-					   <li class="list-group-item" style="background:gray;"><img width="400" height="200" src="/{{model.picture.url}}"></li>
+					   <li class="list-group-item" style="background:gray;"><img style="max-width: 100%;" src="/{{model.picture.url}}"></li>
 			{% else %}
 						<li class="list-group-item">No picture available</li>
 			{% endif %}    
